force-app/main/default/objects/WEBXAssoc__c/WEBXAssoc__c.object-meta.xml
<CustomObject>
    <description>a custom object to hold meeting / account / opportunity associations</description>
    <label>WebEx Assoc</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WebEx Assoc</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>