force-app/main/default/objects/WEBXAssoc__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Salesforce.com account ID</description>
    <label>Account</label>
    <length>32</length>
    <type>Text</type>
</CustomField>