force-app/main/default/objects/WEBXAssoc__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>Hold EventId</description>
    <label>Event</label>
    <length>32</length>
    <type>Text</type>
</CustomField>