force-app/main/default/objects/WEBXAssoc__c/fields/Meetingkey__c.field-meta.xml
<CustomField>
    <fullName>Meetingkey__c</fullName>
    <description>Actually, conf ID of a SalesCenter session.</description>
    <label>Meetingkey</label>
    <length>32</length>
    <type>Text</type>
</CustomField>