force-app/main/default/objects/WEBXAssoc__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Salesforce.com opportunity ID</description>
    <label>Opportunity</label>
    <length>32</length>
    <type>Text</type>
</CustomField>