force-app/main/default/objects/WEBXAssoc__c/fields/PS_Offering__c.field-meta.xml
<CustomField>
    <fullName>PS_Offering__c</fullName>
    <description>PS Offering ID</description>
    <label>PS Offering</label>
    <length>32</length>
    <type>Text</type>
</CustomField>