force-app/main/default/objects/WEBXAssoc__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Meetingkey__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Event__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>